# fasta_windows

./: .gitignore  Cargo.toml  Eregelii.fasta  LICENSE  README.md  plot_entropy.R  test.csv  version_control.sh
fw_out/: 140121.csv  TEST_per_chromosome.csv
src/: entropy.rs  fw.rs  gc.rs  gcu8.rs  kmer.rs  kmer_maps.rs  kmeru8.rs  lib.rs  main.rs  seq_statsu8.rs  utils.rs  wgs.rs  windows.rs
