[package]
name = "fasta_windows"
version = "0.2.5"
authors = ["Max Brown <mb39@sanger.ac.uk>", "Matthieu Muffato", "Rich Challis"]
edition = "2021"
license = "MIT"
description = "Make quick statistics in windows from a fasta file."
homepage = "https://github.com/tolkit/fasta_windows"
repository = "https://github.com/tolkit/fasta_windows"
documentation = "https://github.com/tolkit/fasta_windows"
keywords = ["fasta", "windows", "genomics"]
categories = ["command-line-utilities", "science"]

[dependencies]
clap = {version = "3.1.8", features = ["cargo"]}
rayon = "1.5.0"
indicatif = "0.17.0"
itertools = "0.10.1"
anyhow = "1.0.62"
bio = "1.1.0"
