[package]
name = "fasta_windows"
version = "0.2.6"
authors = ["Max Brown <mb39@sanger.ac.uk>", "Matthieu Muffato", "Rich Challis"]
edition = "2021"
license = "MIT"
description = "Make quick statistics in windows from a fasta file."
homepage = "https://github.com/tolkit/fasta_windows"
repository = "https://github.com/tolkit/fasta_windows"
documentation = "https://github.com/tolkit/fasta_windows"
keywords = ["fasta", "windows", "genomics"]
categories = ["command-line-utilities", "science"]

[dependencies]
clap = {version = "4.5.47", features = ["cargo"]}
rayon = "1.11.0"
indicatif = "0.18.0"
itertools = "0.14.0"
anyhow = "1.0.99"
bio = "2.3.0"
